--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "mdbreact": "^5.1.0",
     "react": "^17.0.2",
+    "react-autocomplete-input": "^1.0.18",
     "react-bootstrap": "^2.0.1",
+    "react-bootstrap-typeahead": "^6.0.0-alpha.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
