--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://MiguelLouisLeRoux.github.io/the-balloon-widget",
   "name": "the-balloon-widget",
   "version": "0.1.0",
   "private": true,
@@ -7,8 +8,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "bootstrap-autocomplete": "^2.3.7",
     "mdbreact": "^5.1.0",
     "react": "^17.0.2",
+    "react-autocomplete-hint": "^1.3.0",
     "react-autocomplete-input": "^1.0.18",
     "react-bootstrap": "^2.0.1",
     "react-bootstrap-typeahead": "^6.0.0-alpha.4",
@@ -18,6 +21,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
